# rust-cuda-matrix

./: Cargo.toml  build.rs
bench/: main.rs
cpu/: Cargo.toml  build.rs
cpu/src/: main.rs  matmul_cpu.rs  matmul_gpu.rs  mod.rs
gpu/: Cargo.toml
gpu/src/: lib.rs
src/: main.rs
