[package]
name = "rust-cuda-matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "*"
time = "*"
nanorand = "0.6.1"
rayon = "*"
approx = "*"
cust = "*"

[[bench]]
name = "example"
harness = false
path = "bench/main.rs"