[package]
name = "cpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cust = "*"
nanorand = "0.6.1"
rayon = "*"
approx = "*"
indicatif = { versiion = "0.17.0-rc.10", rayon = true }

[build-dependencies]
cuda_builder = "*"